Fix responsive layout issues

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2221,3 +2221,107 @@ gap: 50px;
     font-size:22px;
     font-weight:600;
 }
+/* loader */
+
+.loader-screen{
+    position: fixed;
+    inset: 0;
+    background:#0b1120;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    z-index:99999;
+}
+
+.loader-wrapper{
+    position:relative;
+    width:180px;
+    height:180px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.loader-logo{
+     width:80px;
+    height:80px;
+    border-radius:50%;
+    background:#fff;
+    padding:10px;
+    z-index:10;
+    animation: pulse 1.5s infinite, zoomOut 0.8s ease forwards;
+    animation-delay:0s,1.8s;
+}
+@keyframes pulse{
+    0%,100%{
+        transform:scale(1);
+    }
+    50%{
+        transform:scale(1.08);
+    }
+}
+
+@keyframes zoomOut{
+    0%{
+        transform:scale(1);
+        opacity:1;
+    }
+    100%{
+        transform:scale(18);
+        opacity:0;
+    }
+}
+.loader-screen{
+    animation: loaderFade 0.6s ease forwards;
+    animation-delay:2s;
+}
+
+@keyframes loaderFade{
+    to{
+        opacity:0;
+        visibility:hidden;
+    }
+}
+.ring{
+    position:absolute;
+    border-radius:50%;
+    border-style:solid;
+    animation:spin linear infinite;
+}
+
+/* Ring 1 */
+.ring1{
+    width:110px;
+    height:110px;
+    border-width:3px;
+    border-color:#3b82f6 transparent transparent transparent;
+    animation-duration:1s;
+}
+
+/* Ring 2 */
+.ring2{
+    width:135px;
+    height:135px;
+    border-width:3px;
+    border-color:transparent #60a5fa transparent transparent;
+    animation-duration:1.6s;
+}
+
+/* Ring 3 */
+.ring3{
+    width:160px;
+    height:160px;
+    border-width:3px;
+    border-color:transparent transparent #2563eb transparent;
+    animation-duration:2.2s;
+}
+
+
+@keyframes spin{
+    from{
+        transform:rotate(0deg);
+    }
+    to{
+        transform:rotate(360deg);
+    }
+}
